<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addOrEditExpenseViewModel"
            type="com.example.ext.viewmodel.ExpenseViewModel" />

        <variable
            name="addOrEditExpenseFragment"
            type="com.example.ext.fragment.AddExpenseFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:onClick="@{() -> addOrEditExpenseFragment.hideKeyboard()}"
        android:padding="16dp"
        tools:context=".fragment.AddExpenseFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/oswald_medium"
            android:gravity="center"
            android:text="@string/add_expense"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_price"
            style="@style/Widget.App.TextInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            app:hintEnabled="false"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_background"
                android:hint="@string/_0"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@drawable/selector" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_note"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/expense_price"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/optional_note"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_action_notes">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
               android:singleLine="true"
                android:maxLength="50"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/expense_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/expense_note"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:paddingStart="10dp"
            android:popupBackground="@drawable/button_background"
            android:theme="@style/spinnerTheme"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/expense_category_spinner"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:onClick="@{()-> addOrEditExpenseFragment.showModalBottomSheet()}"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/expense_sub_image"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:padding="5dp"
                android:src="@drawable/pet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/expense_sub_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:text="@string/default_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_expense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/save_button_gradient"
            android:onClick="@{() -> addOrEditExpenseFragment.addExpense()}"
            android:text="@string/save_expense"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>